traefik_v2/router/traefik-dashboard-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-route
  namespace: kube-system
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`traefik.k8s.idocker.io`)
    kind: Rule
    services:
      - name: traefik-svc
        port: 8080
